--- a/src/scss/components/_n-layout.scss
+++ b/src/scss/components/_n-layout.scss
@@ -41,7 +41,11 @@
     flex-grow: 1;
     flex-shrink: 0;
     background-color: var(--footer-background) !important;
-    padding-bottom: env(safe-area-inset-bottom);
+  }
+  &.no-tabs {
+    footer.layout-footer {
+      padding-bottom: env(safe-area-inset-bottom);
+    }
   }
   #nav-tabs {
     height: 70px;
