--- a/src/scss/components/_toolbar.scss
+++ b/src/scss/components/_toolbar.scss
@@ -58,6 +58,8 @@
   grid-area: 1 / 2 / 2 / 3;
   justify-content: center;
   font-weight: 700;
+  text-align: center;
+  line-height: 110%;
 }
 .n-toolbar-grid .main h1,
 .n-toolbar-grid .main .title {
