--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -83,3 +83,66 @@ TODO: Organize main into components or containers.
   flex-grow: 1;
   background-color: var(--color-bg);
 }
+
+.tod {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  flex-shrink: 1;
+  .bar {
+    background-color: #fff;
+    width: 16px;
+    border-radius: 8px;
+  }
+
+  .day {
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: calc(100% / 7);
+    height: calc(100% - 16px);
+    padding: 8px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .early_morning {
+    background-color: rgb(0, 14, 91);
+    color: rgb(255, 191, 0);
+  }
+  .morning {
+    background-color: rgb(30, 10, 255);
+    color: rgb(255, 204, 0);
+  }
+  .afternoon {
+    background-color: rgb(80, 159, 255);
+    color: rgb(0, 229, 255);
+  }
+  .evening {
+    background-color: rgb(153, 18, 211);
+    color: yellow;
+  }
+  .night {
+    background-color: rgb(12, 15, 33);
+    color: yellow;
+  }
+}
+
+.dow {
+  flex-grow: 1;
+  flex-shrink: 1;
+  .day {
+    .bar {
+      display: flex;
+      flex-grow: 1;
+      flex-shrink: 1;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.6rem;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+  }
+}
