--- a/src/scss/components/_item-ball.scss
+++ b/src/scss/components/_item-ball.scss
@@ -43,12 +43,12 @@ $sizeLg: $trackerBallSize * 2;
   }
 
   .username {
-    font-weight: 500;
+    font-weight: 400;
     width: 100%;
     text-align: center;
     text-overflow: ellipsis;
     overflow: hidden;
-    color: var(--color-inverse);
+    color: var(--color-inverse-1);
     margin-top: 10px;
     line-height: 1rem;
   }
@@ -99,5 +99,26 @@ $sizeLg: $trackerBallSize * 2;
     left: 20%;
     right: 20%;
     z-index: 202;
+  }
+
+  &.item-ball-small {
+    min-width: auto;
+    width: auto;
+    .avatar-ball {
+      height: 76px;
+      border-radius: 26px;
+      width: auto;
+      @include media-breakpoint-up(sm) {
+        min-width: 100px;
+      }
+    }
+    .username {
+      margin-top: 6px;
+      font-size: 80% !important;
+    }
+    .score {
+      top: -2px;
+      left: -2px;
+    }
   }
 }
