refactor: moved capture log more button to left

--- a/public/main.css
+++ b/public/main.css
@@ -7004,6 +7004,24 @@ aside.n-panel {
     border: solid 1px transparent !important;
     border-radius: 8pt !important; }
 
+.capture-log .more-button {
+  flex-shrink: 0;
+  flex-grow: 0;
+  background-color: var(--color-solid);
+  width: 30px;
+  border-radius: 15px;
+  max-width: 30px;
+  height: 30px;
+  max-height: 30px;
+  overflow: hidden;
+  padding: 0;
+  display: flex;
+  margin-bottom: 6px;
+  margin-left: 6px; }
+  .capture-log .more-button.active {
+    background-color: var(--color-primary) !important;
+    color: #fff; }
+
 .loading-screen {
   position: fixed;
   top: 0;
