feat: better location management

--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -88,6 +88,10 @@
     max-width: 95vw;
   }
 
+  &.no-border {
+    border-bottom: none !important;
+  }
+
   &.bottom-line,
   &[bottom-line] {
     &:after {
