--- a/src/scss/components/_n-log-item.scss
+++ b/src/scss/components/_n-log-item.scss
@@ -1,3 +1,38 @@
+.tracker-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0 10px 10px;
+  button {
+    min-width: calc(50% - 8px);
+    min-height: 70px;
+  }
+}
+
+.n-tracker-value-grid-button {
+  justify-content: flex-start;
+  box-shadow: var(--box-shadow-float);
+  padding: 10px 4px 10px 0px;
+  .emoji {
+    font-size: 40px;
+    width: 60px;
+    line-height: 20px;
+  }
+  .label {
+    text-align: left;
+    font-weight: 500;
+    font-size: 0.8rem;
+    @include truncate();
+    opacity: 0.8;
+  }
+  .value {
+    font-size: 1.1rem;
+    line-height: 1.2rem;
+    text-align: left;
+    @include truncate();
+  }
+}
+
 .n-item-log {
   * {
     // border: solid 1px rgba(blue, 0.2) !important;
@@ -19,7 +54,7 @@
   .n-note-textualized {
     padding: 16pt !important;
     font-size: 1.1rem;
-    line-height: 126%;
+    line-height: 136%;
     border-top: solid 1px var(--color-solid-2);
     &.long-note {
       font-size: 0.97rem;
