--- a/public/main.css
+++ b/public/main.css
@@ -6798,10 +6798,14 @@ aside.n-panel {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 0 6px 10px; }
+  padding: 0 6px 10px;
+  justify-content: flex-start; }
   .tracker-grid button {
     width: calc(50% - 1px);
     min-height: 70px; }
+    @media (min-width: 600px) {
+      .tracker-grid button {
+        width: calc(25% - 1px); } }
 
 .n-tracker-value-grid-button {
   justify-content: flex-start;
