--- a/src/scss/components/_capture-log.scss
+++ b/src/scss/components/_capture-log.scss
@@ -27,7 +27,7 @@
       }
     }
     .btn-group .btn.active {
-      border: solid 1px var(--color-primary-bright) !important;
+      // border: solid 1px var(--color-primary-bright) !important;
       background-color: var(--color-solid) !important;
       border-radius: 8pt !important;
     }
