--- a/src/scss/components/_n-log-item.scss
+++ b/src/scss/components/_n-log-item.scss
@@ -2,26 +2,38 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 0 10px 10px;
+  padding: 0 6px 10px;
+  justify-content: flex-start;
   button {
-    min-width: calc(50% - 8px);
+    width: calc(50% - 1px);
     min-height: 70px;
+    @include media-breakpoint-up(md) {
+      width: calc(25% - 1px);
+    }
   }
 }
 
 .n-tracker-value-grid-button {
   justify-content: flex-start;
-  box-shadow: var(--box-shadow-float);
-  padding: 10px 4px 10px 0px;
+  // box-shadow: var(--box-shadow-float);
+  padding: 0;
+  min-height: 50px;
+
+  &:active {
+    background-color: var(--color-solid-1);
+  }
+
   .emoji {
     font-size: 40px;
     width: 60px;
     line-height: 20px;
+    flex-shrink: 0;
   }
   .label {
     text-align: left;
     font-weight: 500;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+    max-width: calc(100% - 1px);
     @include truncate();
     opacity: 0.8;
   }
@@ -29,6 +41,7 @@
     font-size: 1.1rem;
     line-height: 1.2rem;
     text-align: left;
+    font-weight: 600;
     @include truncate();
   }
 }
@@ -49,6 +62,10 @@
       font-size: 10pt;
       opacity: 0.5;
     }
+  }
+
+  .main {
+    padding-left: 0;
   }
 
   .n-note-textualized {
