--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: stretch;
   padding: 4px 8pt;
-
+  cursor: pointer;
   min-height: 50px;
   max-width: 100vw;
   position: relative;
@@ -16,6 +16,9 @@
   font-size: 1rem;
   flex-shrink: 0;
   background-color: var(--color-solid);
+  display: flex !important;
+  width: 100%;
+  border: none;
 
   &.bg-light {
     background-color: var(--color-bg) !important;
@@ -86,10 +89,6 @@
     border-radius: 0.9rem;
     overflow: hidden;
     max-width: 95vw;
-  }
-
-  &.no-border {
-    border-bottom: none !important;
   }
 
   &.bottom-line,
