feat: added math support within tracker values  - e.g #mood(2*5)
- should be helpful for those using the API and shortcuts

--- a/public/main.css
+++ b/public/main.css
@@ -6287,6 +6287,9 @@ body.scrolling .mini-map {
   .n-item.text-primary-bright .n-text {
     color: var(--color-primary-bright); }
 
+.border-bottom {
+  border-bottom-color: var(--color-solid-1) !important; }
+
 .n-item-divider {
   min-height: 60px !important;
   height: 30px;
