feat: picker input "add on the fly" support

--- a/src/scss/components/_tracker-input-modal.scss
+++ b/src/scss/components/_tracker-input-modal.scss
@@ -22,6 +22,10 @@
     flex-shrink: 1;
     align-items: center;
   }
+  .tracker-input.picker {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
   .tracker-input.keypad {
     flex-direction: column;
     justify-content: stretch;
