--- a/src/scss/components/_tracker-input-modal.scss
+++ b/src/scss/components/_tracker-input-modal.scss
@@ -4,9 +4,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     > div {
       width: 100%;
     }
+
+    &.no-scroll {
+      overflow: auto !important;
+    }
+
     .input-model {
       display: flex;
       flex-direction: column;
@@ -25,6 +31,7 @@
   .input-model.type-picker {
     flex-direction: column;
     justify-content: flex-start;
+    height: 100%;
   }
   .tracker-input.keypad {
     flex-direction: column;
