--- a/src/scss/base/_clickable.scss
+++ b/src/scss/base/_clickable.scss
@@ -1,20 +1,21 @@
 .clickable,
 [clickable] {
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
   position: relative;
   cursor: pointer;
   touch-action: manipulation;
   &:after {
-    transition: all 0.2s ease-in-out;
+    transition: all 0.1s ease-in-out;
     content: "";
     pointer-events: none;
     background-color: rgba($primaryBright, 0);
-    transform: scale(0.1);
+    // transform: scale(0.1);
     border-radius: 8pt;
   }
 }
 .clickable:focus,
 .clickable:active {
+  touch-action: manipulation;
   outline: none;
   overflow: hidden;
   &:after {
@@ -24,7 +25,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    transform: scale(1);
-    background-color: rgba($primaryBright, 0.2);
+    // transform: scale(1);
+    background-color: rgba($primaryBright, 0.1);
   }
 }
