--- a/src/scss/components/_tracker-input-modal.scss
+++ b/src/scss/components/_tracker-input-modal.scss
@@ -32,6 +32,7 @@
     flex-direction: column;
     justify-content: flex-start;
     height: 100%;
+    background-color: var(--color-bg);
 
     .n-list {
       box-shadow: var(--box-shadow-float);
