--- a/public/main.css
+++ b/public/main.css
@@ -6345,13 +6345,18 @@ body.scrolling .mini-map {
   align-items: center; }
 
 .n-modal-frame.tracker-input .input-model.type-picker {
-  flex-direction: column;
-  justify-content: flex-start;
+  display: block;
   height: 100%;
-  background-color: var(--color-bg); }
+  background-color: var(--color-bg);
+  position: relative; }
   .n-modal-frame.tracker-input .input-model.type-picker .n-list {
     box-shadow: var(--box-shadow-float);
-    max-height: 90%;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    bottom: 20px;
+    right: 20px;
+    width: calc(100% - 60px);
     overflow-y: scroll; }
     .n-modal-frame.tracker-input .input-model.type-picker .n-list .n-item {
       min-height: 30px;
