chore: sorting work

--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -1,5 +1,25 @@
 // The component was getting to big... Needed some breathing room
 
+.sortable-ghost {
+  .n-item {
+    border-bottom: solid 3px var(--color-primary-bright) !important;
+  }
+}
+
+.n-picker-list {
+  ul {
+    max-height: 50vh;
+    overflow-y: scroll !important;
+    border: solid 1px var(--color-faded);
+    border-radius: 6px;
+    margin: 6px 8px;
+    background-color: var(--color-faded);
+    .n-item {
+      background-color: transparent;
+    }
+  }
+}
+
 .n-item {
   text-align: left;
   display: flex;
@@ -74,7 +94,7 @@
   }
 
   &.compact {
-    min-height: 35px;
+    min-height: 40px;
     .n-text.md {
       font-size: 0.8rem;
       line-height: 1rem;
@@ -96,12 +116,12 @@
     &:before {
       content: "";
       position: absolute;
-      bottom: 1px;
-      border-bottom: solid 1px var(--color-faded-1);
+      bottom: 0px;
+      border-bottom: solid 1px var(--color-faded-1) !important;
       left: 16px;
       right: 0;
     }
-    &:last-child {
+    > &:last-child {
       &:before {
         display: none;
       }
@@ -237,9 +257,9 @@
   }
 } // end .n-item
 
-.border-bottom {
-  border-bottom-color: var(--color-solid-1) !important;
-}
+// .border-bottom {
+//   border-bottom-color: var(--color-solid-1) !important;
+// }
 
 .n-item-divider {
   min-height: 60px !important;
