--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -8,7 +8,7 @@
 
 .n-picker-list {
   ul {
-    max-height: 50vh;
+    max-height: 45vh;
     overflow-y: scroll !important;
     border: solid 1px var(--color-faded);
     border-radius: 6px;
@@ -16,6 +16,10 @@
     background-color: var(--color-faded);
     .n-item {
       background-color: transparent;
+      &.active {
+        font-weight: bold !important;
+        border-bottom: solid 1px var(--color-primary-bright);
+      }
     }
   }
 }
