--- a/public/main.css
+++ b/public/main.css
@@ -4953,7 +4953,7 @@ button:focus {
 .btn {
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  border-radius: 14px;
+  border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -4975,7 +4975,8 @@ button:focus {
       font-weight: 500; }
 
 .btn-primary {
-  background-color: var(--color-primary-bright); }
+  background-color: var(--color-primary-bright);
+  box-shadow: 0px 6px 12px -6px var(--color-primary-bright); }
 
 .btn-outline-dark {
   border-color: var(--color-solid-2) !important; }
@@ -6689,7 +6690,9 @@ aside.n-panel {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 8px 8px; }
+  padding: 8px 8px;
+  border: none;
+  background: transparent; }
   .item-ball .one-tap {
     position: absolute;
     height: 4px;
@@ -6705,6 +6708,8 @@ aside.n-panel {
     width: 102px;
     height: 102px;
     border-radius: 34.68px;
+    border: none;
+    padding: 0;
     background-color: var(--color-solid);
     box-shadow: var(--box-shadow-float);
     display: flex;
