--- a/src/scss/components/_board-tabs.scss
+++ b/src/scss/components/_board-tabs.scss
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
     &.active {
       // border-bottom: solid 2px var(--color-primary-bright);
       &:before {
