improvement: history view

--- a/public/main.css
+++ b/public/main.css
@@ -5906,7 +5906,8 @@ button {
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    flex-grow: 1; }
     .n-board-tabs .tab.active:before {
       content: "";
       position: absolute;
