--- a/public/main.css
+++ b/public/main.css
@@ -6262,15 +6262,15 @@ body.scrolling .mini-map {
     .n-item .main .title {
       font-size: 1.1rem;
       margin: 2px 0;
-      line-height: 1.56rem;
+      line-height: 1.36rem !important;
       font-weight: 600; }
     .n-item .main p,
     .n-item .main .note,
     .n-item .main .description {
       margin: 2px 0;
       color: var(--color-inverse-3);
-      line-height: 140%;
-      font-size: 0.9rem; }
+      line-height: 132%;
+      font-size: 0.82rem; }
       .n-item .main p.sm, .n-item .main p.small,
       .n-item .main .note.sm,
       .n-item .main .note.small,
